--- a/node-servico-catalogo/package.json
+++ b/node-servico-catalogo/package.json
@@ -8,21 +8,21 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.1",
-    "sequelize": "^6.31.1",
-    "axios": "^1.3.4"         
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.0.0",
+    "sequelize-cli": "^6.6.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5",
-    "sequelize-cli": "^6.6.1"
+    "typescript": "^4.9.5"
   }
 }
