feat: added controller for orders and fixed app properties

--- a/java-order-servico/src/main/java/com.heringorder/resources/application.properties
+++ b/java-order-servico/src/main/java/com.heringorder/resources/application.properties
@@ -1,7 +1,9 @@
-server.port=${SERVER_PORT}
- 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+server.port=${SERVER_PORT:8081}
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST:${DB_HOST}}:${DB_PORT:${DB_PORT}}/${DB_NAME:${DB_NAME}}
+spring.datasource.username=${DB_USER:${DB_USER}}
+spring.datasource.password=${DB_PASS:${DB_PASS}}
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
